[package]
name = "jembo"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Agnoli <pietro_agnoli@proton.me>"]
description = "A drop-in replacement for apple's music preview feature."
readme = "README.md"
repository = "https://github.com/TheCaptainCraken/jembo"
license-file = "LICENSE.txt"
keywords = ["music"]
categories = ["command-line-utilities"]

[[bin]]
name = "jembo"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
metadata = "0.1.9"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
rodio = "0.18.0"
